--- a/index.html
+++ b/index.html
@@ -768,6 +768,441 @@
             opacity: 0.7;
             margin-top: 15px;
         }
+
+        /* Responsive Design */
+
+        /* Tablets and small desktops */
+        @media (max-width: 1024px) {
+            .resources {
+                gap: 15px;
+            }
+
+            .resource {
+                padding: 6px 10px;
+            }
+
+            .units-grid {
+                gap: 15px;
+            }
+
+            .right-menu {
+                width: 70px;
+                padding: 15px 8px;
+            }
+
+            .menu-btn {
+                padding: 12px 8px;
+                font-size: 0.7rem;
+            }
+
+            .menu-btn-icon {
+                font-size: 1.3rem;
+            }
+        }
+
+        /* Phones and small tablets */
+        @media (max-width: 768px) {
+            #country-selection h1 {
+                font-size: 2rem;
+                margin-bottom: 30px;
+            }
+
+            .countries-container {
+                gap: 10px;
+                max-width: 100%;
+                padding: 0 10px;
+            }
+
+            .country-card {
+                width: 100px;
+                padding: 12px;
+            }
+
+            .country-flag {
+                font-size: 2.5rem;
+                margin-bottom: 8px;
+            }
+
+            .country-name {
+                font-size: 0.9rem;
+            }
+
+            #start-btn {
+                padding: 12px 40px;
+                font-size: 1.2rem;
+            }
+
+            /* Game header */
+            .game-header {
+                flex-direction: column;
+                gap: 10px;
+                padding: 10px 15px;
+            }
+
+            .player-info {
+                gap: 10px;
+            }
+
+            .player-flag {
+                font-size: 1.5rem;
+            }
+
+            .player-country {
+                font-size: 1.2rem;
+            }
+
+            .resources {
+                gap: 8px;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .resource {
+                padding: 5px 8px;
+                font-size: 0.85rem;
+            }
+
+            .resource-icon {
+                font-size: 1rem;
+            }
+
+            .resource-value {
+                font-size: 0.95rem;
+            }
+
+            /* Game content layout */
+            .game-content {
+                flex-direction: column;
+                height: auto;
+                min-height: calc(100vh - 120px);
+            }
+
+            .main-area {
+                padding: 15px;
+                order: 1;
+            }
+
+            .units-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 10px;
+                margin-top: 15px;
+                max-width: 100%;
+                width: 100%;
+            }
+
+            .army-display {
+                padding: 15px;
+            }
+
+            .army-display h2 {
+                font-size: 1rem;
+            }
+
+            .army-count {
+                font-size: 1.8rem;
+            }
+
+            .army-icon {
+                font-size: 1.5rem;
+            }
+
+            /* Right menu becomes bottom menu */
+            .right-menu {
+                width: 100%;
+                flex-direction: row;
+                order: 2;
+                padding: 10px;
+                gap: 8px;
+                overflow-x: auto;
+                justify-content: center;
+                flex-wrap: wrap;
+            }
+
+            .menu-btn {
+                padding: 10px 12px;
+                font-size: 0.7rem;
+                min-width: 60px;
+            }
+
+            .menu-btn-icon {
+                font-size: 1.2rem;
+                margin-bottom: 3px;
+            }
+
+            /* Modals */
+            .modal {
+                min-width: unset;
+                max-width: 95vw;
+                width: 95vw;
+                max-height: 85vh;
+                overflow-y: auto;
+                padding: 20px;
+                margin: 10px;
+            }
+
+            .modal-header h2 {
+                font-size: 1.4rem;
+            }
+
+            .shop-item {
+                padding: 12px;
+                flex-direction: column;
+                gap: 10px;
+                text-align: center;
+            }
+
+            .shop-item-info {
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            .buy-btn {
+                width: 100%;
+                padding: 10px;
+            }
+
+            /* Attack setup */
+            .attack-setup-row {
+                padding: 12px;
+            }
+
+            .input-group {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .input-group input {
+                width: 60px;
+                font-size: 1rem;
+            }
+
+            .adjust-btn {
+                padding: 8px 10px;
+                font-size: 0.9rem;
+            }
+
+            .total-power {
+                font-size: 1.1rem;
+                padding: 12px;
+            }
+
+            .launch-attack-btn {
+                font-size: 1.1rem;
+                padding: 12px;
+            }
+
+            /* Enemy list */
+            .enemy-country {
+                flex-direction: column;
+                gap: 10px;
+                text-align: center;
+            }
+
+            .attack-country-btn {
+                width: 100%;
+            }
+
+            /* Battle result */
+            .battle-icon {
+                font-size: 3.5rem;
+            }
+
+            .battle-status {
+                font-size: 1.5rem;
+            }
+
+            /* Attacking progress */
+            .attacking-icon {
+                font-size: 3.5rem;
+            }
+
+            .attacking-title {
+                font-size: 1.4rem;
+            }
+
+            .progress-text {
+                font-size: 1.5rem;
+            }
+
+            /* Quests */
+            .quest-item {
+                flex-direction: column;
+                gap: 10px;
+                text-align: center;
+            }
+
+            .claim-btn {
+                width: 100%;
+            }
+
+            /* Stats */
+            .stat-row {
+                padding: 12px;
+            }
+
+            /* Settings */
+            .setting-row {
+                padding: 12px;
+            }
+        }
+
+        /* Small phones */
+        @media (max-width: 480px) {
+            #country-selection h1 {
+                font-size: 1.6rem;
+                margin-bottom: 20px;
+            }
+
+            .countries-container {
+                gap: 8px;
+            }
+
+            .country-card {
+                width: 85px;
+                padding: 10px;
+            }
+
+            .country-flag {
+                font-size: 2rem;
+                margin-bottom: 5px;
+            }
+
+            .country-name {
+                font-size: 0.75rem;
+            }
+
+            #start-btn {
+                padding: 10px 30px;
+                font-size: 1rem;
+            }
+
+            .game-header {
+                padding: 8px 10px;
+            }
+
+            .resources {
+                gap: 5px;
+            }
+
+            .resource {
+                padding: 4px 6px;
+                font-size: 0.75rem;
+            }
+
+            .resource-icon {
+                font-size: 0.9rem;
+            }
+
+            .resource-value {
+                font-size: 0.85rem;
+            }
+
+            .units-grid {
+                gap: 8px;
+            }
+
+            .army-display {
+                padding: 10px;
+            }
+
+            .army-display h2 {
+                font-size: 0.85rem;
+                margin-bottom: 5px;
+            }
+
+            .army-count {
+                font-size: 1.5rem;
+            }
+
+            .army-icon {
+                font-size: 1.2rem;
+            }
+
+            .right-menu {
+                padding: 8px;
+                gap: 5px;
+            }
+
+            .menu-btn {
+                padding: 8px;
+                font-size: 0.6rem;
+                min-width: 50px;
+            }
+
+            .menu-btn-icon {
+                font-size: 1rem;
+            }
+
+            .modal {
+                padding: 15px;
+            }
+
+            .modal-header h2 {
+                font-size: 1.2rem;
+            }
+
+            .close-btn {
+                font-size: 1.5rem;
+            }
+
+            .shop-item-icon {
+                font-size: 1.5rem;
+            }
+
+            .shop-item-name {
+                font-size: 1rem;
+            }
+
+            .input-group input {
+                width: 50px;
+                padding: 6px;
+                font-size: 0.9rem;
+            }
+
+            .adjust-btn {
+                padding: 6px 8px;
+                font-size: 0.8rem;
+            }
+
+            .battle-details {
+                padding: 12px;
+            }
+
+            .battle-detail-row {
+                padding: 8px 0;
+                font-size: 0.9rem;
+            }
+
+            .enemy-forces {
+                padding: 10px;
+            }
+        }
+
+        /* Landscape mode on phones */
+        @media (max-height: 500px) and (orientation: landscape) {
+            .game-content {
+                flex-direction: row;
+            }
+
+            .main-area {
+                order: 1;
+            }
+
+            .right-menu {
+                width: 70px;
+                flex-direction: column;
+                order: 2;
+                overflow-y: auto;
+            }
+
+            .units-grid {
+                grid-template-columns: repeat(4, 1fr);
+            }
+
+            .modal {
+                max-height: 90vh;
+            }
+        }
     </style>
 </head>
 <body>
@@ -882,6 +1317,10 @@
                 <button class="menu-btn" onclick="openModal('settings')">
                     <span class="menu-btn-icon">⚙️</span>
                     Settings
+                </button>
+                <button class="menu-btn code-btn" onclick="openModal('code')">
+                    <span class="menu-btn-icon">🎁</span>
+                    Code
                 </button>
             </div>
         </div>
