--- a/index.html
+++ b/index.html
@@ -803,6 +803,222 @@
             box-shadow: 0 3px 15px rgba(155, 89, 182, 0.5);
         }
 
+        /* Team Button Style */
+        .menu-btn.team-btn {
+            background: linear-gradient(135deg, #00b894 0%, #00a085 100%);
+        }
+
+        .menu-btn.team-btn:hover {
+            box-shadow: 0 3px 15px rgba(0, 184, 148, 0.5);
+        }
+
+        /* Team Modal Styles */
+        .team-options {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .team-option-btn {
+            padding: 20px;
+            border: none;
+            border-radius: 10px;
+            color: white;
+            font-size: 1.2rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .team-option-btn.create-btn {
+            background: linear-gradient(135deg, #00b894, #00a085);
+        }
+
+        .team-option-btn.join-btn {
+            background: linear-gradient(135deg, #0984e3, #0773c7);
+        }
+
+        .team-option-btn:hover {
+            transform: scale(1.02);
+        }
+
+        .team-form-group {
+            margin-bottom: 15px;
+        }
+
+        .team-form-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+            opacity: 0.9;
+        }
+
+        .team-input {
+            width: 100%;
+            padding: 12px 15px;
+            border: 2px solid rgba(255,255,255,0.2);
+            border-radius: 8px;
+            background: rgba(255,255,255,0.1);
+            color: white;
+            font-size: 1rem;
+            outline: none;
+            transition: border-color 0.3s;
+        }
+
+        .team-input:focus {
+            border-color: #00b894;
+        }
+
+        .team-input::placeholder {
+            color: rgba(255,255,255,0.5);
+        }
+
+        .team-textarea {
+            width: 100%;
+            padding: 12px 15px;
+            border: 2px solid rgba(255,255,255,0.2);
+            border-radius: 8px;
+            background: rgba(255,255,255,0.1);
+            color: white;
+            font-size: 1rem;
+            outline: none;
+            transition: border-color 0.3s;
+            resize: vertical;
+            min-height: 80px;
+        }
+
+        .team-textarea:focus {
+            border-color: #00b894;
+        }
+
+        .team-textarea::placeholder {
+            color: rgba(255,255,255,0.5);
+        }
+
+        .privacy-toggle {
+            display: flex;
+            gap: 10px;
+        }
+
+        .privacy-option {
+            flex: 1;
+            padding: 12px;
+            border: 2px solid rgba(255,255,255,0.2);
+            border-radius: 8px;
+            background: rgba(255,255,255,0.1);
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s;
+            text-align: center;
+        }
+
+        .privacy-option:hover {
+            background: rgba(255,255,255,0.2);
+        }
+
+        .privacy-option.selected {
+            border-color: #00b894;
+            background: rgba(0, 184, 148, 0.3);
+        }
+
+        .team-code-display {
+            background: rgba(255,255,255,0.1);
+            border-radius: 8px;
+            padding: 15px;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .team-code-display .code {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: #00b894;
+            letter-spacing: 5px;
+        }
+
+        .create-team-btn {
+            width: 100%;
+            padding: 15px;
+            margin-top: 20px;
+            border: none;
+            border-radius: 10px;
+            background: linear-gradient(135deg, #00b894, #00a085);
+            color: white;
+            font-size: 1.2rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .create-team-btn:hover {
+            transform: scale(1.02);
+            box-shadow: 0 5px 20px rgba(0, 184, 148, 0.5);
+        }
+
+        .team-display {
+            background: rgba(255,255,255,0.1);
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .team-display-name {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #00b894;
+            margin-bottom: 10px;
+        }
+
+        .team-display-desc {
+            opacity: 0.8;
+            margin-bottom: 15px;
+        }
+
+        .team-display-info {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 15px;
+        }
+
+        .team-display-badge {
+            padding: 5px 15px;
+            border-radius: 20px;
+            font-size: 0.9rem;
+            font-weight: bold;
+        }
+
+        .team-display-badge.public {
+            background: rgba(9, 132, 227, 0.3);
+            color: #74b9ff;
+        }
+
+        .team-display-badge.private {
+            background: rgba(253, 121, 168, 0.3);
+            color: #fd79a8;
+        }
+
+        .leave-team-btn {
+            margin-top: 20px;
+            padding: 10px 25px;
+            border: none;
+            border-radius: 8px;
+            background: linear-gradient(135deg, #e74c3c, #c0392b);
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .leave-team-btn:hover {
+            transform: scale(1.05);
+        }
+
         /* Code Modal Styles */
         .code-input-container {
             display: flex;
@@ -1528,6 +1744,10 @@
                     <span class="menu-btn-icon">🎁</span>
                     Code
                 </button>
+                <button class="menu-btn team-btn" onclick="openModal('team')">
+                    <span class="menu-btn-icon">👥</span>
+                    Team
+                </button>
             </div>
         </div>
     </div>
@@ -1819,6 +2039,69 @@
         </div>
     </div>
 
+    <!-- Team Modal -->
+    <div class="modal-overlay" id="team-modal">
+        <div class="modal">
+            <div class="modal-header">
+                <h2>👥 Team</h2>
+                <button class="close-btn" onclick="closeModal('team')">&times;</button>
+            </div>
+            <div id="team-content">
+                <!-- Will be populated by JavaScript -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Create Team Modal -->
+    <div class="modal-overlay" id="create-team-modal">
+        <div class="modal">
+            <div class="modal-header">
+                <h2>✨ Create Team</h2>
+                <button class="close-btn" onclick="closeModal('create-team')">&times;</button>
+            </div>
+            <div class="team-form-group">
+                <label>Team Name</label>
+                <input type="text" id="team-name-input" class="team-input" placeholder="Enter team name..." maxlength="20">
+            </div>
+            <div class="team-form-group">
+                <label>Description</label>
+                <textarea id="team-desc-input" class="team-textarea" placeholder="Describe your team..." maxlength="100"></textarea>
+            </div>
+            <div class="team-form-group">
+                <label>Privacy</label>
+                <div class="privacy-toggle">
+                    <button class="privacy-option selected" id="privacy-public" onclick="selectPrivacy('public')">🌍 Public</button>
+                    <button class="privacy-option" id="privacy-private" onclick="selectPrivacy('private')">🔒 Private</button>
+                </div>
+            </div>
+            <div id="team-code-container" style="display: none;">
+                <div class="team-code-display">
+                    <p style="margin-bottom: 10px; opacity: 0.8;">Your team code:</p>
+                    <div class="code" id="generated-team-code">00000</div>
+                    <p style="margin-top: 10px; font-size: 0.9rem; opacity: 0.7;">Share this code with friends to join!</p>
+                </div>
+            </div>
+            <button class="create-team-btn" onclick="createTeam()">🚀 Create Team</button>
+        </div>
+    </div>
+
+    <!-- Join Team Modal -->
+    <div class="modal-overlay" id="join-team-modal">
+        <div class="modal">
+            <div class="modal-header">
+                <h2>🔗 Join Team</h2>
+                <button class="close-btn" onclick="closeModal('join-team')">&times;</button>
+            </div>
+            <p style="margin-bottom: 20px; opacity: 0.8;">Enter a team code to join a private team:</p>
+            <div class="team-form-group">
+                <label>Team Code</label>
+                <input type="text" id="join-team-code" class="team-input" placeholder="Enter 5-digit code..." maxlength="5">
+            </div>
+            <div id="join-team-message" class="code-message"></div>
+            <button class="create-team-btn" style="background: linear-gradient(135deg, #0984e3, #0773c7);" onclick="joinTeamByCode()">🔗 Join Team</button>
+        </div>
+    </div>
+
     <script>
         // Game State
         let gameState = {
@@ -1830,6 +2113,7 @@
             planes: 0,
             ships: 0,
             totalPurchased: 0,
+            team: null, // { name, description, isPrivate, code }
             goldSpent: 0,
             battlesWon: 0,
             battlesLost: 0,
@@ -1956,6 +2240,9 @@
                 document.getElementById('code-input').value = '';
                 document.getElementById('code-message').className = 'code-message';
             }
+            if (type === 'team') {
+                renderTeamContent();
+            }
             document.getElementById(type + '-modal').classList.add('active');
             updateDisplays();
         }
@@ -2025,7 +2312,8 @@
                     battlesLost: 0,
                     questsCompleted: [],
                     questLevel: 'starter',
-                    redeemedCodes: []
+                    redeemedCodes: [],
+                    team: null
                 };
                 document.getElementById('game-screen').style.display = 'none';
                 document.getElementById('country-selection').style.display = 'flex';
@@ -2625,6 +2913,148 @@
                 }).join('');
             }
         }
+
+        // Team functionality
+        let selectedPrivacy = 'public';
+        let generatedTeamCode = '';
+
+        // Render team modal content
+        function renderTeamContent() {
+            const container = document.getElementById('team-content');
+
+            if (gameState.team) {
+                // Show current team
+                container.innerHTML = `
+                    <div class="team-display">
+                        <div class="team-display-name">${gameState.team.name}</div>
+                        <div class="team-display-desc">${gameState.team.description || 'No description'}</div>
+                        <div class="team-display-info">
+                            <span class="team-display-badge ${gameState.team.isPrivate ? 'private' : 'public'}">
+                                ${gameState.team.isPrivate ? '🔒 Private' : '🌍 Public'}
+                            </span>
+                        </div>
+                        ${gameState.team.isPrivate ? `
+                        <div class="team-code-display" style="margin-top: 20px;">
+                            <p style="margin-bottom: 5px; opacity: 0.8; font-size: 0.9rem;">Team Code:</p>
+                            <div class="code">${gameState.team.code}</div>
+                        </div>
+                        ` : ''}
+                        <button class="leave-team-btn" onclick="leaveTeam()">🚪 Leave Team</button>
+                    </div>
+                `;
+            } else {
+                // Show create/join options
+                container.innerHTML = `
+                    <p style="margin-bottom: 20px; opacity: 0.8;">Create or join a team to play with friends!</p>
+                    <div class="team-options">
+                        <button class="team-option-btn create-btn" onclick="openCreateTeam()">
+                            ✨ Create Team
+                        </button>
+                        <button class="team-option-btn join-btn" onclick="openJoinTeam()">
+                            🔗 Join Team
+                        </button>
+                    </div>
+                `;
+            }
+        }
+
+        // Open create team modal
+        function openCreateTeam() {
+            closeModal('team');
+            // Reset form
+            document.getElementById('team-name-input').value = '';
+            document.getElementById('team-desc-input').value = '';
+            selectPrivacy('public');
+            openModal('create-team');
+        }
+
+        // Open join team modal
+        function openJoinTeam() {
+            closeModal('team');
+            document.getElementById('join-team-code').value = '';
+            document.getElementById('join-team-message').className = 'code-message';
+            openModal('join-team');
+        }
+
+        // Select privacy option
+        function selectPrivacy(privacy) {
+            selectedPrivacy = privacy;
+            document.getElementById('privacy-public').classList.toggle('selected', privacy === 'public');
+            document.getElementById('privacy-private').classList.toggle('selected', privacy === 'private');
+
+            const codeContainer = document.getElementById('team-code-container');
+            if (privacy === 'private') {
+                // Generate random 5-digit code
+                generatedTeamCode = String(Math.floor(10000 + Math.random() * 90000));
+                document.getElementById('generated-team-code').textContent = generatedTeamCode;
+                codeContainer.style.display = 'block';
+            } else {
+                generatedTeamCode = '';
+                codeContainer.style.display = 'none';
+            }
+        }
+
+        // Create team
+        function createTeam() {
+            const name = document.getElementById('team-name-input').value.trim();
+            const description = document.getElementById('team-desc-input').value.trim();
+
+            if (!name) {
+                alert('Please enter a team name!');
+                return;
+            }
+
+            gameState.team = {
+                name: name,
+                description: description,
+                isPrivate: selectedPrivacy === 'private',
+                code: selectedPrivacy === 'private' ? generatedTeamCode : null
+            };
+
+            saveGame();
+            closeModal('create-team');
+            openModal('team');
+        }
+
+        // Join team by code
+        function joinTeamByCode() {
+            const code = document.getElementById('join-team-code').value.trim();
+            const message = document.getElementById('join-team-message');
+
+            if (!code || code.length !== 5) {
+                message.className = 'code-message error';
+                message.textContent = 'Please enter a valid 5-digit code!';
+                return;
+            }
+
+            // In a real app, this would check against a server
+            // For now, we'll just create a team with that code
+            gameState.team = {
+                name: 'Team ' + code,
+                description: 'Joined via code',
+                isPrivate: true,
+                code: code
+            };
+
+            saveGame();
+            message.className = 'code-message success';
+            message.textContent = 'Successfully joined team!';
+
+            setTimeout(() => {
+                closeModal('join-team');
+                openModal('team');
+            }, 1000);
+        }
+
+        // Leave team
+        function leaveTeam() {
+            if (confirm('Are you sure you want to leave this team?')) {
+                gameState.team = null;
+                saveGame();
+                renderTeamContent();
+            }
+        }
+
     </script>
 </body>
 </html>
